changed the fireworks examples to match the new framework, made clauncher's default settings fireworks not fireworks_settings

--- a/examples/fireworks/fireworks_tutorial/SinglePointForceCalc.ipynb
+++ b/examples/fireworks/fireworks_tutorial/SinglePointForceCalc.ipynb
@@ -2,22 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/purcell/bin/python/anaconda3.6/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!/usr/bin/env python\n",
     "\n",
     "# Import modules from ase and fireworks\n",
+    "from pathlib import Path\n",
     "import os\n",
     "import numpy as np\n",
     "\n",
@@ -39,12 +31,14 @@
     "from hilde.fireworks_api_adapter.launchpad import LaunchPadHilde as LaunchPad\n",
     "\n",
     "# Import the hilde calculate function so both the local and remote machines have the same function in their path\n",
-    "from hilde.tasks.fireworks import calculate as hilde_calc"
+    "from hilde.tasks.calculate import calculate as hilde_calc\n",
+    "from hilde.tasks.fireworks.general_py_task import generate_firework\n",
+    "from hilde.tasks.fireworks.fw_action_outs import mod_spec_add\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,12 +61,12 @@
     "db_path = os.getcwd() + \"/test.db\"\n",
     "\n",
     "# Port changes are for my setup\n",
-    "launchpad = LaunchPad(port=27018, strm_lvl=\"INFO\")"
+    "launchpad = LaunchPad.from_file(str(Path.home()/\".fireworks/my_launchpad.yaml\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,51 +102,44 @@
     "        \"walltime\": \"00:01:00\",\n",
     "        \"nodes\": 1,\n",
     "    }\n",
+    "}\n",
+    "fw_settings = {\n",
+    "    \"serial\": True,\n",
+    "    \"fw_name\": \"Ni_forces\",\n",
+    "    \"fw_spec\": None,\n",
+    "    \"mod_spec_add\": \"calc_atoms\",\n",
+    "    \"spec\": q_spec\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Remote Settings (Change these to match what you need)\n",
-    "remote_settings={\n",
-    "    # Has to be a full path to the host, draco.mpcdf.mpg.de will time out. Needs to be a list\n",
-    "    \"remote_host\": [\"draco01.mpcdf.mpg.de\"],\n",
-    "    # Not necessary if remote host is username@host\n",
-    "    \"remote_user\": \"tpurcell\",\n",
-    "    # Try to avoid using this\n",
-    "    \"remote_password\": None,\n",
-    "    \"remote_config_dir\": [\"/u/tpurcell/.fireworks\"],\n",
-    "    # If you are using Kerberos this needs to be True\n",
-    "    \"gss_auth\": True\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Remote Settings (Change these to match what you need)\n",
-    "settings = Settings(\"/home/purcell/git/hilde/hilde.cfg\")\n",
+    "settings = Settings()\n",
     "fireworks_kwargs = settings.fireworks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up a Workflow where each FireTask has its own Firework\n",
     "wd = \"/u/tpurcell/.fireworks/Ni/\"\n",
     "\n",
-    "fw_calc = Firework(\n",
-    "    PyTask({\"func\": hilde_calc.name, \"args\": [wd, \"calc_atoms\", ni_dict]}), spec=q_spec\n",
+    "fw_calc = generate_firework(\n",
+    "    hilde_calc,\n",
+    "    mod_spec_add,\n",
+    "    {\"workdir\": wd},\n",
+    "    ni,\n",
+    "    ni.calc,\n",
+    "    atoms_calc_from_spec=False,\n",
+    "    fw_settings=fw_settings,\n",
     ")\n",
     "\n",
     "fw_to_db = Firework(\n",
@@ -166,100 +153,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(type(fireworks_kwargs[\"remote_host\"]))"
+    "launchpad.add_wf(wf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2018-11-16 15:27:29,053 INFO Added a workflow. id_map: {75: 77, 76: 78}\n",
-      "78 [78, 77]\n",
-      "qlaunch_hilde --reserve rapidfire --maxjobs_queue 250 --maxjobs_block 500 --nlaunches 1 --sleep 15 --firework_ids 78\n",
-      "2018-11-16 15:27:29,319 ERROR ----|vvv|----\n",
-      "2018-11-16 15:27:29,320 ERROR Error with queue launcher rapid fire!\n",
-      "2018-11-16 15:27:29,323 ERROR Traceback (most recent call last):\n",
-      "  File \"/home/purcell/bin/python/anaconda3.6/lib/python3.6/site-packages/HiLDe-0.1-py3.6-linux-x86_64.egg/hilde/fireworks_api_adapter/combined_launcher.py\", line 237, in rapidfire\n",
-      "    return_code = rlaunch(*args, **kwargs)\n",
-      "  File \"/home/purcell/bin/python/anaconda3.6/lib/python3.6/site-packages/HiLDe-0.1-py3.6-linux-x86_64.egg/hilde/fireworks_api_adapter/qlaunch_remote.py\", line 143, in qlaunch_remote\n",
-      "    \"qlaunch_hilde {} {} {}\".format(pre_non_default, command, non_default)\n",
-      "  File \"<decorator-gen-3>\", line 2, in run\n",
-      "  File \"/home/purcell/bin/python/anaconda3.6/lib/python3.6/site-packages/fabric/connection.py\", line 29, in opens\n",
-      "    self.open()\n",
-      "  File \"/home/purcell/bin/python/anaconda3.6/lib/python3.6/site-packages/fabric/connection.py\", line 615, in open\n",
-      "    self.client.connect(**kwargs)\n",
-      "  File \"/home/purcell/bin/python/anaconda3.6/lib/python3.6/site-packages/paramiko/client.py\", line 334, in connect\n",
-      "    to_try = list(self._families_and_addresses(hostname, port))\n",
-      "  File \"/home/purcell/bin/python/anaconda3.6/lib/python3.6/site-packages/paramiko/client.py\", line 204, in _families_and_addresses\n",
-      "    hostname, port, socket.AF_UNSPEC, socket.SOCK_STREAM\n",
-      "  File \"/home/purcell/bin/python/anaconda3.6/lib/python3.6/socket.py\", line 745, in getaddrinfo\n",
-      "    for res in _socket.getaddrinfo(host, port, family, type, proto, flags):\n",
-      "socket.gaierror: [Errno -2] Name or service not known\n",
-      "\n",
-      "2018-11-16 15:27:29,330 ERROR ----|^^^|----\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "launchpad.add_wf(wf)\n",
     "lq_rapidfire(\n",
     "    launchpad,\n",
+    "    FWorker(),\n",
     "    wflow=wf,\n",
-    "    launch_dir=\".\",\n",
-    "    nlaunches=0,\n",
-    "    njobs_queue=250,\n",
-    "    njobs_block=500,\n",
-    "    sleep_time=15,\n",
     "    reserve=True,\n",
-    "    remote_host=fireworks_kwargs[\"remote_host\"],\n",
-    "    remote_user=fireworks_kwargs[\"remote_user\"],\n",
-    "    remote_password=fireworks_kwargs[\"remote_password\"],\n",
-    "    remote_config_dir=fireworks_kwargs[\"remote_config_dir\"],\n",
-    "    # List of tasks that should be done on the queue\n",
-    "    tasks2queue=[hilde_calc.name],\n",
-    "    gss_auth=fireworks_kwargs[\"gss_auth\"],\n",
+    "    gss_auth=True\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Atomic forces from the new atoms are: \n",
-      "[[ 2.75670600e-15 -1.06217932e-16 -5.86336535e-16]\n",
-      " [ 2.08575155e-14 -2.32452946e-15 -1.40512602e-15]\n",
-      " [-2.75474088e-15  2.34534614e-15  1.25940924e-15]\n",
-      " [-9.96193416e-15 -2.80117861e-15  2.01227923e-16]]\n",
-      "Atomic forces from the row is: \n",
-      "[[ 2.75670600e-15 -1.06217932e-16 -5.86336535e-16]\n",
-      " [ 2.08575155e-14 -2.32452946e-15 -1.40512602e-15]\n",
-      " [-2.75474088e-15  2.34534614e-15  1.25940924e-15]\n",
-      " [-9.96193416e-15 -2.80117861e-15  2.01227923e-16]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# See the results with the database access\n",
     "db = connect(db_path)\n",
