--- a/doc/interpolation/interpolation.tex
+++ b/doc/interpolation/interpolation.tex
@@ -32,6 +32,7 @@
 % comments:
 \definecolor{dblue}{RGB}{31,119,180}
 \newcommand{\FK}[1]{\textcolor{dblue}{{\bf FK: #1 }}}
+\newcommand{\REM}[1]{\textcolor{dblue}{{\bf REM: #1 }}}
 
 % Theorems
 \newtheorem{theorem}{Lemma}
@@ -75,6 +76,12 @@
 \newcommand{\tops}[2]{\texorpdfstring{#1}{#2}}
 \renewcommand{\H}{\mathcal{H}}
 \newcommand{\bk}{\boldsymbol{k}{}}
+
+\usepackage{relsize}
+\newcommand{\tp}[1]{{#1}^{\mathrm t}}
+% \!\: = 1mu distance; \!\; = 2mu (\, = 3mu)
+\newcommand{\itp}[1]{{#1}^{\!\:\scalebox{0.55}[1.0]{\( - \)}1 \mathrm 
+		t}}
 
 
 \begin{document}
@@ -152,6 +159,10 @@ with
 	\b F_I &= - \frac{\partial E}{\partial \b R_I}, \\
 	\uunderline{\Phi}_{I,J}	&= \frac{\partial^2 E}{\partial \b R_I ~ \partial \b R_J}~.
 \end{align}
+
+\cleardoublepage
+
+\input{./periodic.tex}
 
 
 \bibliographystyle{unsrt}
