rename hash_atoms -> hash_atoms_and_calc

--- a/examples/fireworks/fireworks_tutorial/SinglePointForceCalc.ipynb
+++ b/examples/fireworks/fireworks_tutorial/SinglePointForceCalc.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "# Minimal hilde inputs to make dictionary conversion easier\n",
     "from hilde.helpers.input_exchange import dict2patoms, patoms2dict\n",
-    "from hilde.helpers.hash import hash_atoms\n",
+    "from hilde.helpers.hash import hash_atoms_and_calc\n",
     "\n",
     "# Get defaults from hilde.cfg\n",
     "from hilde.settings import Settings\n",
@@ -56,7 +56,7 @@
     "ni.set_calculator(EMT())\n",
     "ni_dict = patoms2dict(ni)\n",
     "\n",
-    "ni_hash, calc_hash = hash_atoms(ni)\n",
+    "ni_hash, calc_hash = hash_atoms_and_calc(ni)\n",
     "\n",
     "db_path = os.getcwd() + \"/test.db\"\n",
     "\n",
@@ -74,7 +74,7 @@
     "    db = connect(db_path)\n",
     "    at = dict2patoms(atoms_dict[0])\n",
     "    at.calc.atoms = at\n",
-    "    atoms_hash, calc_hash = hash_atoms(at)\n",
+    "    atoms_hash, calc_hash = hash_atoms_and_calc(at)\n",
     "    selection = [(\"atoms_hash\", \"=\", atoms_hash), \n",
     "                 (\"calc_hash\", \"=\", calc_hash)]\n",
     "    # Try to update the database if the material is already present, if not add it to the database\n",
