renamed fireworks_api_adapter to fireworks

--- a/examples/fireworks/fireworks_tutorial/SinglePointForceCalc.ipynb
+++ b/examples/fireworks/fireworks_tutorial/SinglePointForceCalc.ipynb
@@ -27,8 +27,8 @@
     "from hilde.settings import Settings\n",
     "\n",
     "# Combined local/remote queue launching\n",
-    "from hilde.fireworks_api_adapter.combined_launcher import rapidfire as lq_rapidfire\n",
-    "from hilde.fireworks_api_adapter.launchpad import LaunchPadHilde as LaunchPad\n",
+    "from hilde.fireworks.combined_launcher import rapidfire as lq_rapidfire\n",
+    "from hilde.fireworks.launchpad import LaunchPadHilde as LaunchPad\n",
     "\n",
     "# Import the hilde calculate function so both the local and remote machines have the same function in their path\n",
     "from hilde.tasks.calculate import calculate as hilde_calc\n",
