--- a/examples/.devel/old/phonons_socketio/phonons_socketio.py.ipynb
+++ b/examples/.devel/old/phonons_socketio/phonons_socketio.py.ipynb
@@ -11,7 +11,7 @@
     "from hilde.helpers.paths import cwd\n",
     "from hilde.helpers.k_grid import d2k\n",
     "from hilde.helpers.geometry import get_cubicness\n",
-    "from hilde.helpers.maths import clean_matrix\n",
+    "from hilde.helpers.numerics import clean_matrix\n",
     "from hilde.phonopy import wrapper as ph\n",
     "from pathlib import Path\n",
     "import numpy as np\n",
