--- a/examples/.devel/supercells/conventions.ipynb
+++ b/examples/.devel/supercells/conventions.ipynb
@@ -20,7 +20,7 @@
     "from hilde.parsers import read_structure\n",
     "from hilde.helpers.supercell import find_cubic_cell\n",
     "from hilde.helpers.geometry import get_cubicness\n",
-    "from hilde.helpers.maths import clean_matrix\n",
+    "from hilde.helpers.numerics import clean_matrix\n",
     "from ase.build.supercells import make_supercell\n",
     "from hilde.phonopy import wrapper as ph"
    ]
