units | rewrite konstanten.einheiten and rename eV_to_THz to omega_to_THz

--- a/examples/.devel/phono3py/basics/phono3py.ipynb
+++ b/examples/.devel/phono3py/basics/phono3py.ipynb
@@ -226,7 +226,7 @@
     "    symprec=0.0001,\n",
     "    is_symmetry=True,\n",
     "    symmetrize_fc3q=False,\n",
-    "    frequency_factor_to_THz=const.eV_to_THz,\n",
+    "    frequency_factor_to_THz=const.omega_to_THz,\n",
     "    log_level=2,\n",
     ")\n",
     "phonon3.generate_displacements(\n",
