--- a/examples/devel/ase_stress.ipynb
+++ b/examples/devel/ase_stress.ipynb
@@ -58,10 +58,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "port = 12345\n",
-    "aims = Aims(**{'use_pimd_wrapper': f'localhost {port}', **aims_settings})\n",
+    "aims = Aims(**{'use_pimd_wrapper': f'localhost {31415}', **aims_settings})\n",
     "\n",
-    "calc = SocketIOCalculator(aims, port = port)"
+    "calc = SocketIOCalculator(aims)"
    ]
   },
   {
@@ -112,8 +111,7 @@
     "    assert msg == 'STRESSREADY'\n",
     "    natoms = atoms.calc.server.protocol.recv(1, np.int32)\n",
     "    stresses = atoms.calc.server.protocol.recv((int(natoms), 3, 3), np.float64)\n",
-    "    stresses *= units.Ha\n",
-    "    return stresses"
+    "    return stresses * units.Ha"
    ]
   },
   {
@@ -222,6 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "atoms.positions[0, 0] += .01\n",
     "atoms.calc.calculate(atoms, system_changes=['positions'])"
    ]
   },
@@ -238,7 +237,7 @@
       "  lattice_vector         2.72000000        0.00000000        2.72000000\r\n",
       "  lattice_vector         2.72000000        2.72000000        0.00000000\r\n",
       "\r\n",
-      "            atom         0.00000000        0.00000000        0.00000000  Si\r\n",
+      "            atom         0.01000000        0.00000000        0.00000000  Si\r\n",
       "            atom         1.36000000        1.36000000        1.36000000  Si\r\n",
       " ------------------------------------------------------------------------\r\n",
       "  @ DRIVER MODE: Message from server: STATUS      \r\n",
@@ -295,11 +294,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          |   Average:        8.104 MB\r\n",
+      "          |   Average:        8.149 MB\r\n",
       "          | Largest tracked array allocation (hamiltonian_shell):\r\n",
-      "          |   Minimum:        1.708 MB (on task 3)\r\n",
+      "          |   Minimum:        1.760 MB (on task 1)\r\n",
       "          |   Maximum:        1.760 MB (on task 1)\r\n",
-      "          |   Average:        1.747 MB\r\n",
+      "          |   Average:        1.760 MB\r\n",
       "          Note:  These values currently only include a subset of arrays which are explicitly tracked.\r\n",
       "          The \"true\" memory usage will be greater.\r\n",
       "\r\n",
