pickle | only append `.gz` for zipped pickled objects, make psave,pread more accessible

--- a/examples/phono3py/basics/phono3py.ipynb
+++ b/examples/phono3py/basics/phono3py.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AttributeDict([('displacement', 0.03), ('symprec', 1e-05), ('trigonal', False), ('is_diagonal', False), ('q_mesh', [11, 11, 11]), ('cutoff_pair_distance', 100.0), ('log_level', 2)])\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import h5py\n",
@@ -104,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -112,6 +122,9 @@
      "text": [
       "** Warning from file /home/knoop/local/hilde/hilde/phonopy/workflow.py, line 50, function bootstrap:\n",
       "--> Settings do not contain phonopy instructions.\n",
+      "\n",
+      "** Warning from file /home/knoop/local/hilde/hilde/templates/aims.py, line 40, function setup_aims:\n",
+      "--> No [control] section in /home/knoop/local/hilde/hilde.cfg, return calc=None, good luck!\n",
       "\n",
       "* Message from file /home/knoop/local/hilde/hilde/helpers/socketio.py, line 20, function get_port:\n",
       "--> Socketio not used with calculator emt\n",
@@ -137,6 +150,9 @@
       "** Warning from file /home/knoop/local/hilde/hilde/phonopy/workflow.py, line 50, function bootstrap:\n",
       "--> Settings do not contain phono3py instructions.\n",
       "\n",
+      "** Warning from file /home/knoop/local/hilde/hilde/templates/aims.py, line 40, function setup_aims:\n",
+      "--> No [control] section in /home/knoop/local/hilde/hilde.cfg, return calc=None, good luck!\n",
+      "\n",
       "* Message from file /home/knoop/local/hilde/hilde/helpers/socketio.py, line 20, function get_port:\n",
       "--> Socketio not used with calculator emt\n",
       "\n",
@@ -161,8 +177,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phonon = pread('phonon.pick')\n",
-    "phonon3 = pread('phonon3.pick')"
+    "phonon = pread('phonon.pick.gz')\n",
+    "phonon3 = pread('phonon3.pick.gz')"
    ]
   },
   {
@@ -205,8 +221,8 @@
      "output_type": "stream",
      "text": [
       "Number of FC2 displacements: 1\n",
-      "Number of FC3 displacements: 37\n",
-      "Number of FC3 displacements that were created: 15\n"
+      "Number of FC3 displacements: 49\n",
+      "Number of FC3 displacements that were created: 18\n"
      ]
     }
    ],
@@ -224,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q_mesh = 3*[3]\n",
+    "q_mesh = 3*[5]\n",
     "phonon3_new = ph3.prepare_phono3py(**phono3py_settings,\n",
     "                                   fc2=fc2,\n",
     "                                   fc3=fc3,\n",
@@ -250,8 +266,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 4.74310503e+00  4.74310503e+00  4.74310503e+00  9.02149672e-19\n",
-      "  0.00000000e+00 -7.49162213e-18]\n"
+      "[ 4.95576995e+00  4.95576995e+00  4.95576995e+00 -1.11909370e-17\n",
+      "  0.00000000e+00 -6.50113003e-18]\n"
      ]
     }
    ],
