map supercell | add new routine to map indices in supercells directly and update xample

--- a/examples/devel/sort_atoms/sort.ipynb
+++ b/examples/devel/sort_atoms/sort.ipynb
@@ -10,7 +10,8 @@
     "\n",
     "from ase.io import read\n",
     "\n",
-    "from hilde.helpers.lattice_points import map_I_to_iL"
+    "from hilde.helpers.lattice_points import map_I_to_iL\n",
+    "from hilde.helpers.supercell import map_indices"
    ]
   },
   {
@@ -19,10 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "primitive = read('geometry.in', format='aims')\n",
-    "supercell = read('geometry.in.supercell', format='aims')\n",
-    "\n",
-    "tdep_sc = read('outfile.ssposcar', format='vasp')"
+    "atoms1 = read('geometry.in.supercell', format='aims')\n",
+    "atoms2 = read('outfile.ssposcar', format='vasp')"
    ]
   },
   {
@@ -34,13 +33,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".. found 24 (28) lattice points in 0.001s\n",
-      ".. matched 120 positions in supercell and primitive cell in 0.161s\n"
+      ".. found 1 (7) lattice points in 0.001s\n",
+      ".. matched 120 positions in supercell and primitive cell in 0.123s\n"
      ]
     }
    ],
    "source": [
-    "I2iL, iL2I = map_I_to_iL(primitive, supercell, return_inverse=True)"
+    "# create a list that converts from first to second supercell:\n",
+    "_, index_map = map_I_to_iL(atoms2, atoms1, return_inverse=True)"
    ]
   },
   {
@@ -52,13 +52,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".. found 24 (28) lattice points in 0.001s\n",
-      ".. matched 120 positions in supercell and primitive cell in 0.179s\n"
+      ".. found 1 (7) lattice points in 0.001s\n",
+      ".. matched 120 positions in supercell and primitive cell in 0.118s\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "tdep_I2iL, tdep_iL2I = map_I_to_iL(primitive, tdep_sc, return_inverse=True)"
+    "all(index_map == map_indices(atoms1, atoms2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create new supercell from the atoms in atoms1 in the order of the atoms in atoms2"
    ]
   },
   {
@@ -67,8 +84,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a list that converts from supercell to tdep supercell:\n",
-    "index2tdep = [iL2I[iL] for iL in tdep_I2iL]"
+    "new_supercell = atoms1.copy()\n",
+    "\n",
+    "# delete all the atoms\n",
+    "del new_supercell[:]"
    ]
   },
   {
@@ -77,10 +96,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_supercell = supercell.copy()\n",
-    "\n",
-    "# delete all the atoms\n",
-    "del new_supercell[:]"
+    "for II in index_map:\n",
+    "    new_supercell.append(atoms1[II])"
    ]
   },
   {
@@ -89,40 +106,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for II in index2tdep:\n",
-    "    new_supercell.append(supercell[II])"
+    "new_supercell.write('test.poscar', direct=True, vasp5=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_supercell.write('test.poscar', direct=True, vasp5=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Atom('Cs', [0.0, 13.154874076290309, 3.100633555], index=0)\n",
       "Atom('Cs', [8.769916050860207, 13.15487407629031, 3.1006335550000617], index=0)\n",
       "Atom('Cs', [8.769916050860207, 13.154874076290309, 3.100633555], index=0)\n",
       "\n",
+      "Atom('Cs', [0.0, 13.154874076290309, 9.301900665], index=1)\n",
       "Atom('Cs', [8.769916050860207, 13.15487407629031, 9.301900665], index=1)\n",
       "Atom('Cs', [8.769916050860207, 13.154874076290309, 9.301900665], index=1)\n",
       "\n",
+      "Atom('Cs', [0.0, 13.154874076290309, 15.503167775], index=2)\n",
       "Atom('Cs', [8.769916050860207, 13.15487407629031, 15.50316777499994], index=2)\n",
       "Atom('Cs', [8.769916050860207, 13.154874076290309, 15.503167775], index=2)\n",
       "\n",
+      "Atom('I', [2.192479012715051, 15.347353089005363, 0.0], index=3)\n",
       "Atom('Cs', [13.15487407629031, 0.0, 3.1006335550000617], index=3)\n",
       "Atom('Cs', [13.154874076290309, 0.0, 3.100633555], index=3)\n",
       "\n",
+      "Atom('I', [2.192479012715051, 15.347353089005363, 6.20126711], index=4)\n",
       "Atom('Cs', [13.15487407629031, 0.0, 9.301900665], index=4)\n",
       "Atom('Cs', [13.154874076290309, 0.0, 9.301900665], index=4)\n",
       "\n",
@@ -132,7 +144,8 @@
    ],
    "source": [
     "for ii in range(5):\n",
-    "    print(tdep_sc[ii])\n",
+    "    print(atoms1[ii])\n",
+    "    print(atoms2[ii])\n",
     "    print(new_supercell[ii])\n",
     "    print()\n",
     "print('...')"
